Fix About width on mobile

--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -15,7 +15,7 @@
 
 @layer components {
   .about {
-    @apply my-16 pb-16 w-5/6 md:ml-16;
+    @apply my-16 pb-16 md:w-5/6 md:ml-16 w-full;
   }
 
   .about-paragraph {
